--- a/Behind_the_scenes/index.html
+++ b/Behind_the_scenes/index.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Behind the Scenes</title>
 </head>
+<style>
+  * {
+    background-color: #272727;
+  }
+</style>
 <body>
   
 </body>
