--- a/Algorithms/index.html
+++ b/Algorithms/index.html
@@ -7,6 +7,8 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="./script.js"></script>
+  <button onclick="teste()">
+  Teste</button>
 </body>
+<script src="./script.js"></script>
 </html>
